feat: add validation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ hikari.connection-test-query= "SELECT current_timestamp"
 hikari.minimum-idle= 1
 hikari.maximum-pool-size= 100
 hikari.connection-timeout= 40000
+
+spring.jackson.default-property-inclusion=non-null
