feat: create s3 config class

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 server.port=8080
 spring.profiles.active=prod
+
+app.aws.s3.bucket-name=joaog-course-files
+app.aws.s3.access-key=
+app.aws.s3.secret-key=
